Update VSCode settings to include additional build flags for Go language server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "gopls": {
-        "buildFlags": ["-tags=wireinject"]
+        "buildFlags": [
+            "-tags=wireinject",
+            "-tags=!wireinject"
+        ]
     }
 } 
