Refactor Taskfile and enhance hotkey manager logging
- Updated Taskfile.yml to streamline task commands, replacing the build task with a run task for improved clarity.
- Enhanced the hotkey manager by adding informative logging messages during startup and message loop processes, improving traceability.
- Introduced a debug task to facilitate easier application debugging with environment variable support.

These changes improve the overall structure and logging of the application, contributing to a more user-friendly experience.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,23 +3,21 @@ version: '3'
 tasks:
   default:
     cmds:
-      - task --list
+      - task: run
 
   wire:
-    desc: Generate wire dependency injection code
-    dir: internal/di
     cmds:
-      - wire
-
-  build:
-    desc: Build the application
-    deps: [wire]
-    cmds:
-      - go build -o bin/godo cmd/godo/main.go
+      - cd internal/di && wire
 
   run:
-    desc: Run the application
     deps: [wire]
+    cmds:
+      - go run cmd/godo/main.go
+
+  debug:
+    deps: [wire]
+    env:
+      DEBUG: "1"
     cmds:
       - go run cmd/godo/main.go
 
