--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -64,3 +64,20 @@ tasks:
     platforms: [windows]
     cmds:
       - cmd /C "type logs\godo.log"
+
+  test-coverage:
+    desc: Run tests with coverage report
+    deps: [wire]
+    cmds:
+      - go test -race -coverprofile=coverage.out -coverpkg=./... ./...
+      - go tool cover -html=coverage.out -o coverage.html
+      - go tool cover -func=coverage.out
+
+  test-coverage-threshold:
+    desc: Run tests and check coverage threshold
+    deps: [wire]
+    cmds:
+      - cmd: bash scripts/test-coverage.sh
+        platforms: [windows]
+      - cmd: ./scripts/test-coverage.sh
+        platforms: [linux, darwin]
