Refactor GitHub Actions workflow to use SQLite instead of MariaDB
- Removed MariaDB service configuration from the workflow.
- Added installation steps for SQLite and its development libraries.
- Updated the testing steps to eliminate MariaDB environment variables, streamlining the CI process.

These changes simplify the workflow by transitioning to SQLite, enhancing portability and reducing dependencies.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,22 +11,6 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
 
-    services:
-      mariadb:
-        image: mariadb:10.11
-        env:
-          MARIADB_ROOT_PASSWORD: rootpassword
-          MARIADB_USER: goforms_test
-          MARIADB_PASSWORD: goforms_test
-          MARIADB_DATABASE: goforms_test
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping -h localhost"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
     steps:
       - uses: actions/checkout@v4
 
@@ -43,6 +27,11 @@ jobs:
           version: "3.x"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install SQLite
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y sqlite3 libsqlite3-dev
+
       - name: Install dependencies
         run: task install
 
@@ -51,31 +40,8 @@ jobs:
         with:
           version: latest
 
-      - name: Install golang-migrate
-        run: |
-          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.linux-amd64.tar.gz | tar xvz
-          sudo mv migrate /usr/local/bin/migrate
-          which migrate
-
-      - name: Run migrations
-        run: task migrate:up
-        env:
-          MARIADB_ROOT_PASSWORD: rootpassword
-          MARIADB_USER: goforms
-          MARIADB_PASSWORD: goforms
-          MARIADB_DATABASE: goforms_test
-          DB_HOST: localhost
-          DB_PORT: 3306
-
       - name: Run tests
         run: task test:coverage
-        env:
-          MARIADB_ROOT_PASSWORD: rootpassword
-          MARIADB_USER: goforms
-          MARIADB_PASSWORD: goforms
-          MARIADB_DATABASE: goforms_test
-          DB_HOST: localhost
-          DB_PORT: 3306
 
   build:
     name: Build
