Enhance GolangCI configuration and refactor Todo model
- Updated .golangci.yml to enable additional linters (govet, staticcheck, gosimple, ineffassign, misspell, unconvert) for improved code quality.
- Adjusted output format settings for better readability.
- Refactored the Todo model in todo.go for consistent formatting and improved readability, ensuring better maintainability of the codebase.

These changes enhance code quality checks and improve the structure of the Todo model, contributing to a cleaner and more maintainable codebase.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,10 +3,26 @@ linters:
   disable-all: true
   enable:
     - gofmt
+    - govet
+    - staticcheck
+    - gosimple
+    - ineffassign
+    - misspell
+    - unconvert
 
 run:
   go: '1.23'
 
 output:
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
+
+linters-settings:
+  gofmt:
+    simplify: true
+
+issues:
+  exclude-use-default: false
+  max-issues-per-linter: 0
+  max-same-issues: 0
   
