--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y gcc
+        sudo apt-get install -y gcc libayatana-appindicator3-dev libgtk-3-dev
 
     - name: Update dependencies
       run: go get -u fyne.io/fyne/v2/app
