Enhance GolangCI configuration, improve cleanup logic, and refactor context handling
- Updated .golangci.yml to include new linters (revive, unused) and configured revive rules for better code quality checks.
- Improved cleanup logic in cmd/godo/main.go to handle errors during application cleanup more effectively.
- Added Cleanup method in internal/di/app.go for better resource management.
- Refactored context handling in repository and service layers to ensure proper context usage and error handling.
- Updated mock service methods to use context correctly, enhancing test reliability.

These changes improve code quality, maintainability, and error handling across the application.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,6 +9,8 @@ linters:
     - ineffassign
     - misspell
     - unconvert
+    - revive
+    - unused
 
 run:
   go: '1.23'
@@ -20,6 +22,11 @@ output:
 linters-settings:
   gofmt:
     simplify: true
+  revive:
+    rules:
+      - name: unused-parameter
+        severity: warning
+        disabled: false
 
 issues:
   exclude-use-default: false
