Refactor logging and configuration handling in the application
- Updated the logger initialization to accept a configuration struct, allowing for more flexible logging setup.
- Enhanced the main application logic to load configuration based on the environment, improving error handling during initialization.
- Introduced a new task in Taskfile.yml for checking Go code formatting, alongside the existing formatting task.
- Streamlined the application context management during systray operations.

These changes improve the application's logging capabilities, configuration management, and code formatting processes, enhancing overall maintainability and usability.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -64,9 +64,15 @@ tasks:
         platforms: [linux, darwin]
 
   fmt:
-    desc: Format code
     cmds:
-      - gofmt -s -w .
+      - goimports -w ./...
+      - gofmt -s -w ./...
+    desc: Format all Go code
+
+  fmt-check:
+    cmds:
+      - goimports -l ./...
+    desc: Check if files need formatting
 
   clean:
     desc: Clean build artifacts
