Refactor Go formatting tasks in Taskfile.yml
- Updated the formatting commands in the `fmt` task to target the current directory instead of all subdirectories, improving efficiency.
- Added `go mod tidy` to the `fmt` task to ensure module dependencies are clean and up-to-date.
- Enhanced the `fmt-check` task to check for formatting issues more effectively by using `gofmt -l .` and ensuring no files require formatting.

These changes streamline the Go code formatting process and improve the management of module dependencies.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -64,15 +64,17 @@ tasks:
         platforms: [linux, darwin]
 
   fmt:
-    cmds:
-      - goimports -w ./...
-      - gofmt -s -w ./...
     desc: Format all Go code
+    cmds:
+      - goimports -w .
+      - gofmt -s -w .
+      - go mod tidy
 
   fmt-check:
-    cmds:
-      - goimports -l ./...
     desc: Check if files need formatting
+    cmds:
+      - goimports -l .
+      - test -z "$(gofmt -l .)"
 
   clean:
     desc: Clean build artifacts
