Refactor database connection handling and improve context management
- Updated the database connection logic to accept a configuration struct, enhancing flexibility and maintainability.
- Refactored context handling in the main application to ensure proper cancellation during systray operations.
- Simplified the provider set for dependency injection by separating default and configured sets, improving clarity.
- Removed redundant build flags in the VSCode settings for cleaner configuration.

These changes enhance the application's configuration management, context handling, and overall maintainability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
     "gopls": {
         "buildFlags": [
-            "-tags=wireinject",
-            "-tags=!wireinject"
+            "-tags=wireinject"
         ]
     }
-} 
+}
