--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,13 +20,19 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y gcc libayatana-appindicator3-dev libgtk-3-dev
 
-    - name: Update dependencies
-      run: go get -u fyne.io/fyne/v2/app
+    - name: Install Task
+      uses: arduino/setup-task@v1
+      with:
+        version: 3.x
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Clean and rebuild
+    - name: Install project dependencies
+      run: task install
+
+    - name: Run tests and linting
       run: |
-        go clean -modcache
-        CGO_ENABLED=1 go build -v ./...
+        task lint
+        task test-coverage-threshold
 
-    - name: Run tests
-      run: go test -v ./...
+    - name: Build all platforms
+      run: task build-all
