--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,19 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y gcc libayatana-appindicator3-dev libgtk-3-dev
+        sudo apt-get install -y \
+          gcc \
+          libayatana-appindicator3-dev \
+          libgtk-3-dev \
+          libx11-dev \
+          libxcb1-dev \
+          libxkbcommon-dev \
+          libxkbcommon-x11-dev \
+          libx11-xcb-dev \
+          libxcursor-dev \
+          libxrandr-dev \
+          libxinerama-dev \
+          libxi-dev
 
     - name: Install Task
       uses: arduino/setup-task@v1
