Enhance hotkey management and CI/CD configuration
- Updated .golangci.yml to include additional linters (goimports, gocritic) and improved settings for parallel runners and output sorting.
- Modified Taskfile.yml to streamline cross-platform build checks and simplify linting commands for Windows, macOS, and Linux.
- Enhanced GitHub Actions workflow to include a cross-platform build check step.
- Refactored hotkey management implementation across platforms, introducing platform-specific hotkey managers for Windows, macOS, and Linux.
- Removed outdated test files and consolidated hotkey configuration for better maintainability.

These changes improve code quality, streamline the build process, and enhance the hotkey management architecture.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,13 +11,22 @@ linters:
     - unconvert
     - revive
     - unused
+    - goimports
+    - gocritic
 
 run:
   go: '1.23'
+  build-tags:
+    - windows
+    - linux
+    - darwin
+  allow-parallel-runners: true
+  modules-download-mode: readonly
 
 output:
   formats:
     - format: colored-line-number
+  sort-results: true
 
 linters-settings:
   gofmt:
@@ -27,9 +36,29 @@ linters-settings:
       - name: unused-parameter
         severity: warning
         disabled: false
+  gocritic:
+    enabled-tags:
+      - diagnostic
+      - style
+      - performance
+    disabled-checks:
+      - commentFormatting
+      - hugeParam
 
 issues:
   exclude-use-default: false
   max-issues-per-linter: 0
   max-same-issues: 0
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - gocritic
+    - path: internal/hotkey/
+      text: "unused-parameter"
+      linters:
+        - revive
+    - path: internal/hotkey/types_(windows|darwin|linux)\.go
+      text: "DefaultConfig redeclared"
+    - path: internal/hotkey/(hotkey|quicknote)_(windows|darwin|linux)\.go
+      text: "newPlatform.*Manager redeclared"
   
