--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,3 +48,9 @@ jobs:
 
     - name: Build all platforms
       run: task build-all
+
+    - name: Cross-platform build check
+      run: |
+        GOOS=darwin go build ./...
+        GOOS=linux go build ./...
+        GOOS=windows go build ./...
