Refactor application structure and update golangci configuration
- Renamed the `ui` parameter to `todoUI` in the `NewApp` constructor for clarity.
- Introduced a new function `ProvideDefaultSet` to return the Wire provider set, enhancing code organization.
- Updated the `ConfiguredSet` to include core dependencies, service layer, UI components, and application initialization, improving modularity.
- Enhanced the golangci configuration to include specific file patterns for the logger, ensuring better linting practices.

These changes improve code clarity, organization, and maintainability across the application.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -89,6 +89,7 @@ linters-settings:
           - pkg: "github.com/charmbracelet/bubbles"
             desc: "use fyne.io/fyne/v2 for GUI instead"
       logger:
+        files: ["internal/logger/.*\\.go$"]
         path: "github.com/jonesrussell/godo/internal/logger"
         allow:
           - $gostd
