Integrate single instance lock in Godo application
- Added a single instance lock mechanism to prevent multiple instances of the Godo application from running simultaneously.
- Updated the main.go file to include the new lock functionality, enhancing application stability and user experience.
- Included the 'github.com/marcsauter/single' package in the project dependencies for this feature.

These changes improve the application's robustness by ensuring that only one instance can be executed at a time, preventing potential conflicts.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -66,6 +66,7 @@ linters-settings:
           - fyne.io/fyne/v2
           - gopkg.in/yaml.v3
           - github.com/stretchr/testify
+          - github.com/marcsauter/single
           # Internal packages
           - github.com/jonesrussell/godo/internal
           - github.com/jonesrussell/godo/pkg
