Update golangci configuration to enable goimports and adjust local prefixes
- Removed the disabled setting for goanalysis to enhance linting capabilities.
- Added goimports configuration with local prefixes for improved import management.
- These changes contribute to better code quality and maintainability in the Godo application.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -48,10 +48,10 @@ linters-settings:
     severity: "medium"
   lll:
     line-length: 120
-  goanalysis:
-    disabled: true
   govet:
     checks: ["fieldalignment"]
+  goimports:
+    local-prefixes: github.com/jonesrussell/godo
   depguard:
     rules:
       main:
