Enhance logging and error handling in Godo application
- Updated the logging configuration in .golangci.yml to include 'fmt' in the allowed imports for better linting.
- Improved error handling in main.go by logging errors when unlocking the single instance, enhancing application stability.
- Refactored the String method in types.go to simplify the output for HotkeyBinding and improved error formatting in the Error struct.
- Added a comment to logger.go to suppress the global variable linting warning.

These changes contribute to better logging practices and error management, improving the overall robustness of the Godo application.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -93,6 +93,7 @@ linters-settings:
         path: "github.com/jonesrussell/godo/internal/logger"
         allow:
           - $gostd
+          - fmt
           - go.uber.org/zap
           - github.com/jonesrussell/godo/internal/common
         deny:
