Update README and Taskfile for Windows packaging
- Enhanced the README.md to clarify the build process by renaming the step to "Build and package the application" and adding instructions for packaging the Windows executable.
- Introduced a new task in Taskfile.yaml for packaging the Windows executable using Fyne, including dependencies and commands for the packaging process.

These changes improve the documentation and build process for Windows users, ensuring a smoother experience when packaging the Godo application.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -166,3 +166,10 @@ tasks:
     cmds:
       - task: wire
       - go generate ./...
+
+  package-windows:
+    desc: Package Windows executable with Fyne
+    deps: [wire, build-windows]
+    dir: cmd/godo
+    cmds:
+      - fyne package -os windows
