Enhance FyneApp.toml configuration and refactor quick note functionality
- Added new sections in FyneApp.toml for Source, Development, and Release configurations, providing clearer build context and helper text.
- Refactored the ShowQuickNote function to simplify the quick note window creation, improving the user interface by setting a fixed size and enhancing focus handling.
- Removed unnecessary context management and logging for quick note submission, streamlining the process and improving code clarity.

These changes contribute to a more organized configuration and a better user experience in the Godo application.

--- a/cmd/godo/FyneApp.toml
+++ b/cmd/godo/FyneApp.toml
@@ -7,6 +7,16 @@ Website = "https://github.com/jonesrussell/godo"
   Version = "0.1.0"
   Build = 9
 
+[Source]
+  Repo = "https://github.com/jonesrussell/godo"
+  Dir = "cmd/godo"
+
+[Development]
+  HelperText = "Development build with debug symbols"
+
+[Release]
+  HelperText = "Release build without debug symbols"
+
 [LinuxAndBSD]
   GenericName = "Todo Application"
   Categories = ["Utility", "Office"]
